--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "firebase": "^11.2.0",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-toastify": "^0.2.8",
     "vuefire": "^3.2.1",
     "vuetify": "^3.7.7",
     "vuex": "^4.0.2"
